force-app/main/default/objects/UIInstruction__e/UIInstruction__e.object-meta.xml
<CustomObject>
    <label>UIInstruction</label>
    <pluralLabel>UIInstructions</pluralLabel>
</CustomObject>