force-app/main/default/objects/UIInstruction__e/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>