force-app/main/default/objects/UIInstruction__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>